[package]
name = "meteora-proto"
version = "0.1.0"
authors = ["MinoruOsuka <minoru.osuka@gmail.com>"]
edition = "2018"
description = "Meteora is a distributed key-value store."
documentation = "https://github.com/mosuka/meteora"
homepage = "https://github.com/mosuka/meteora"
repository = "https://github.com/mosuka/meteora"
readme = "README.md"
keywords = ["kvs", "key", "value", "store"]
categories = ["database"]
license = "MIT"

[dependencies]
futures = "0.1.29"
grpcio = { version = "0.4.7", features = [ "secure" ] }
protobuf = "2.14.0"
raft = "0.4.3"
