[package]
name = "meteora"
version = "0.1.0"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"
description = "Meteora is a distributed key-value store."
documentation = "https://github.com/mosuka/meteora"
homepage = "https://github.com/mosuka/meteora"
repository = "https://github.com/mosuka/meteora"
readme = "README.md"
keywords = ["kvs", "key", "value", "store"]
categories = ["database"]
license = "MIT"

[[bin]]
name = "meteora"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
crossbeam-channel = "0.5.0"
ctrlc = { version = "3.1.8", features = ["termination"] }
env_logger = "0.8.3"
futures = "0.1.29"
grpcio = { version = "0.4.7", features = [ "secure" ] }
log = "0.4.14"
raft = "0.4.3"
serde_json = "1.0.64"

meteora-server = { version = "0.1.0", path = "../meteora-server" }
meteora-proto = { version = "0.1.0", path = "../meteora-proto" }
meteora-client = { version = "0.1.0", path = "../meteora-client" }
